@@ -24,7 +24,7 @@ siteTag   = ALC
 
 debugMode = True
 ftpDaemon = ioftpd
-modules   = ftpd free groups help invite nxtools pretimes readlogs
+modules   = ftpd free groups help invite nxtools online pretimes readlogs
 varFiles  = core.vars ioftpd.vars iozs.vars nxautonuke.vars nxtools.vars
 themeFile = default-io.theme
 
@@ -194,6 +194,23 @@ warnSection = STAFF
 [Module::NxTools]
 configFile = E:/ioFTPD/scripts/nxTools.cfg
 dataPath   = E:/ioFTPD/scripts/nxTools/data/
+
+#### Module: Online
+#
+# Name: online
+# Info: Display online statistics.
+# Path: modules/ioftpd/online
+#
+# cmdPrefix  - Command prefix for commands specific to this module. The
+#              default prefix will be used if this option is undefined.
+# hideUsers  - List of users to hide.
+# hideGroups - List of groups to hide.
+# hidePaths  - List of virtual paths to hide.
+#
+[Module::Online]
+hideUsers  = sitebot
+hideGroups =
+hidePaths  = "/GROUPS/*" "/STAFF/*"
 
 #### Module: Pre Times
 #
