@@ -1,0 +1,48 @@
+#
+# AlcoBot - Alcoholicz site bot.
+# Copyright (c) 2005 Alcoholicz Scripting Team
+#
+# Module Name:
+#   Online Module Variables
+#
+# Author:
+#   neoxed (neoxed@gmail.com) Oct 7, 2005
+#
+# Abstract:
+#   Variable definitions for the online stats module.
+#
+
+[Events]
+
+[Replace]
+
+[Variables]
+bandwidth     = speedDn:s speedUp:s speedTotal:s usersDn:n usersUp:n usersIdle:n usersTotal:n
+bandwidthDn   = speedDn:s speedUp:s speedTotal:s usersDn:n usersUp:n usersIdle:n usersTotal:n
+bandwidthUp   = speedDn:s speedUp:s speedTotal:s usersDn:n usersUp:n usersIdle:n usersTotal:n
+
+idleHead      =
+idleBody      = user:z group:z idle:d vpath:z
+idleFoot      = speed:s users:n
+
+downloadHead  =
+downloadBody  = user:z group:z size:b speed:s vpath:z file:z
+downloadFoot  = speed:s users:n
+
+uploadHead    =
+uploadBody    = user:z group:z size:b speed:s vpath:z file:z
+uploadFoot    = speed:s users:n
+
+speedHead     = user:z
+speedIdle     = user:z group:z idle:d vpath:z
+speedDownload = user:z group:z size:b speed:s vpath:z file:z
+speedUpload   = user:z group:z size:b speed:s vpath:z file:z
+speedNone     =
+speedFoot     = speedDn:s speedUp:s speedTotal:s usersDn:n usersUp:n usersIdle:n usersTotal:n
+
+whoHead       =
+whoIdle       = user:z group:z idle:d vpath:z
+whoDownload   = user:z group:z size:b speed:s vpath:z file:z
+whoUpload     = user:z group:z size:b speed:s vpath:z file:z
+whoNone       =
+whoFoot       = speedDn:s speedUp:s speedTotal:s usersDn:n usersUp:n usersIdle:n usersTotal:n
