@@ -1,0 +1,6 @@
+# Module Definition File
+desc=Online Stats
+context=::alcoholicz::Online
+depends=
+tclFile=modOnline.tcl
+varFile=modOnline.vars
