@@ -1,4 +1,5 @@
 AlcoExt v0.4.0 (XXX XX, 2005):
+  NEW: Online stats module, to view bandwidth usage and user activity.
   NEW: Support for alternative user/group stores (e.g. ioShareDb). Access
        to ioFTPD's user and group files is now done using shared memory.
 
